--- a/lang/en.json
+++ b/lang/en.json
@@ -84,5 +84,9 @@
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "You're logged in!": "You're logged in!",
     "Your email address is unverified.": "Your email address is unverified.",
-    "CLUB SECRETO": "SECRET CLUB"
+    "CLUB SECRETO": "SECRET CLUB",
+    "logout": "logout",
+    "inicio": "Inicio",
+    "sobre": "About",
+    "novedades": "News"
 }
