--- a/lang/es.json
+++ b/lang/es.json
@@ -84,7 +84,11 @@
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "You're logged in!": "¡Usted está conectado!",
     "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
-    "CLUB SECRETO": "CLUB SECRETO"
+    "CLUB SECRETO": "CLUB SECRETO",
+    "logout": "Cerrar sesión",
+    "inicio": "Inicio",
+    "sobre": "Sobre el club",
+    "novedades": "Novedades"
 
 
 }
