noticias con idiomas

--- a/lang/en.json
+++ b/lang/en.json
@@ -88,5 +88,20 @@
     "logout": "logout",
     "inicio": "Inicio",
     "sobre": "About",
-    "novedades": "News"
+    "novedades": "News",
+    "Últimas Noticias del Club Secreto Secretoso": "Latest News from the Secret Club",
+    "Bienvenidos a la sección de noticias de nuestro exclusivo y secreto club. Aquí, solo los miembros más intrépidos tienen acceso a los eventos más recientes y los anuncios que mantienen vivo el misterio.": "Welcome to the news section of our exclusive and secret club. Here, only the bravest members have access to the latest events and announcements that keep the mystery alive.",
+    "La Reunión Secreta de la Luna Llena": "The Secret Full Moon Meeting",
+    "Este mes, durante la luna llena, el Club Secreto Secretoso llevará a cabo su reunión anual. Los miembros deberán seguir instrucciones estrictas para llegar al lugar secreto.": "This month, during the full moon, the Secret Club will hold its annual meeting. Members will need to follow strict instructions to reach the secret location.",
+    "Publicado el:": "Published on:",
+    "Leer más...": "Read more...",
+    "El Misterioso Código del Club": "The Mysterious Club Code",
+    "Un nuevo código secreto ha sido descubierto dentro de los archivos más profundos del Club Secreto Secretoso. Este código contiene información vital sobre el futuro de la organización.": "A new secret code has been discovered within the deepest files of the Secret Club. This code contains vital information about the organization's future.",
+    "Los Nuevos Miembros del Club Secreto": "The New Members of the Secret Club",
+    "Hemos recibido una nueva tanda de solicitudes de miembros. Las entrevistas se llevarán a cabo en la sede secreta, con medidas de seguridad extremas.": "We have received a new batch of member applications. Interviews will take place at the secret headquarters, with extreme security measures.",
+    "Un Secreto Mejor Guardado": "A Better Kept Secret",
+    "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "The most advanced members of the Club have discovered a secret that changes the course of the entire organization. Details are still confidential, but they will be revealed soon.",
+    "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Stay tuned. Secret news only reaches the most prepared.",
+    "Unirte al Club Secreto Secretoso": "Join the Secret Club"
+
 }
