--- a/lang/es.json
+++ b/lang/es.json
@@ -88,7 +88,21 @@
     "logout": "Cerrar sesión",
     "inicio": "Inicio",
     "sobre": "Sobre el club",
-    "novedades": "Novedades"
+    "novedades": "Novedades",
+    "Últimas Noticias del Club Secreto Secretoso": "Últimas Noticias del Club Secreto Secretoso",
+    "Bienvenidos a la sección de noticias de nuestro exclusivo y secreto club. Aquí, solo los miembros más intrépidos tienen acceso a los eventos más recientes y los anuncios que mantienen vivo el misterio.": "Bienvenidos a la sección de noticias de nuestro exclusivo y secreto club. Aquí, solo los miembros más intrépidos tienen acceso a los eventos más recientes y los anuncios que mantienen vivo el misterio.",
+    "La Reunión Secreta de la Luna Llena": "La Reunión Secreta de la Luna Llena",
+    "Este mes, durante la luna llena, el Club Secreto Secretoso llevará a cabo su reunión anual. Los miembros deberán seguir instrucciones estrictas para llegar al lugar secreto.": "Este mes, durante la luna llena, el Club Secreto Secretoso llevará a cabo su reunión anual. Los miembros deberán seguir instrucciones estrictas para llegar al lugar secreto.",
+    "Publicado el:": "Publicado el:",
+    "Leer más...": "Leer más...",
+    "El Misterioso Código del Club": "El Misterioso Código del Club",
+    "Un nuevo código secreto ha sido descubierto dentro de los archivos más profundos del Club Secreto Secretoso. Este código contiene información vital sobre el futuro de la organización.": "Un nuevo código secreto ha sido descubierto dentro de los archivos más profundos del Club Secreto Secretoso. Este código contiene información vital sobre el futuro de la organización.",
+    "Los Nuevos Miembros del Club Secreto": "Los Nuevos Miembros del Club Secreto",
+    "Hemos recibido una nueva tanda de solicitudes de miembros. Las entrevistas se llevarán a cabo en la sede secreta, con medidas de seguridad extremas.": "Hemos recibido una nueva tanda de solicitudes de miembros. Las entrevistas se llevarán a cabo en la sede secreta, con medidas de seguridad extremas.",
+    "Un Secreto Mejor Guardado": "Un Secreto Mejor Guardado",
+    "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.",
+    "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Mantente atento. Las noticias secretas llegan solo a los más preparados.",
+    "Unirte al Club Secreto Secretoso": "Unirte al Club Secreto Secretoso"
 
 
 }
