--- a/lang/fr.json
+++ b/lang/fr.json
@@ -88,5 +88,20 @@
     "logout": "se déconnecter",
     "inicio": "Commencer",
     "sobre": "À propos",
-    "novedades": "Nouvelles"
+    "novedades": "Nouvelles",
+    "Últimas Noticias del Club Secreto Secretoso": "Dernières nouvelles du Club Secret",
+    "Bienvenidos a la sección de noticias de nuestro exclusivo y secreto club. Aquí, solo los miembros más intrépidos tienen acceso a los eventos más recientes y los anuncios que mantienen vivo el misterio.": "Bienvenue dans la section des actualités de notre club exclusif et secret. Ici, seuls les membres les plus intrépides ont accès aux derniers événements et annonces qui maintiennent le mystère vivant.",
+    "La Reunión Secreta de la Luna Llena": "La Réunion Secrète de la Pleine Lune",
+    "Este mes, durante la luna llena, el Club Secreto Secretoso llevará a cabo su reunión anual. Los miembros deberán seguir instrucciones estrictas para llegar al lugar secreto.": "Ce mois-ci, lors de la pleine lune, le Club Secret organisera sa réunion annuelle. Les membres devront suivre des instructions strictes pour atteindre le lieu secret.",
+    "Publicado el:": "Publié le :",
+    "Leer más...": "Lire la suite...",
+    "El Misterioso Código del Club": "Le Code Mystérieux du Club",
+    "Un nuevo código secreto ha sido descubierto dentro de los archivos más profundos del Club Secreto Secretoso. Este código contiene información vital sobre el futuro de la organización.": "Un nouveau code secret a été découvert dans les archives les plus profondes du Club Secret. Ce code contient des informations vitales sur l'avenir de l'organisation.",
+    "Los Nuevos Miembros del Club Secreto": "Les Nouveaux Membres du Club Secret",
+    "Hemos recibido una nueva tanda de solicitudes de miembros. Las entrevistas se llevarán a cabo en la sede secreta, con medidas de seguridad extremas.": "Nous avons reçu une nouvelle série de demandes d'adhésion. Les entretiens auront lieu au siège secret, avec des mesures de sécurité extrêmes.",
+    "Un Secreto Mejor Guardado": "Un Secret Mieux Gardé",
+    "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "Les membres les plus avancés du Club ont découvert un secret qui change le cours de toute l'organisation. Les détails sont encore confidentiels, mais ils seront bientôt révélés.",
+    "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Restez attentif. Les nouvelles secrètes arrivent uniquement aux plus préparés.",
+    "Unirte al Club Secreto Secretoso": "Rejoindre le Club Secret"
+
 }
