SOLO FALTA ABOUT

--- a/lang/en.json
+++ b/lang/en.json
@@ -102,6 +102,14 @@
     "Un Secreto Mejor Guardado": "A Better Kept Secret",
     "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "The most advanced members of the Club have discovered a secret that changes the course of the entire organization. Details are still confidential, but they will be revealed soon.",
     "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Stay tuned. Secret news only reaches the most prepared.",
-    "Unirte al Club Secreto Secretoso": "Join the Secret Club"
+    "Unirte al Club Secreto Secretoso": "Join the Secret Club",
+    "HOME": "HOME",
+    "¡Bienvenido!": "Welcome!",
+    "Al club secreto secretoso, más secreto y secretoso de todos los clubs secretos y secretosos.": "To the most secret and secretive secret club of all the secret and secretive clubs.",
+    "Más sobre nosotros": "More about us",
+    "Administrar Miembros del Club": "Manage Club Members",
+    "CRUD Miembros!": "CRUD Members!",
+    "Gestión del club": "Club Management",
+    "Ver miembros": "View members"
 
 }
