--- a/lang/es.json
+++ b/lang/es.json
@@ -102,7 +102,17 @@
     "Un Secreto Mejor Guardado": "Un Secreto Mejor Guardado",
     "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.",
     "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Mantente atento. Las noticias secretas llegan solo a los más preparados.",
-    "Unirte al Club Secreto Secretoso": "Unirte al Club Secreto Secretoso"
+    "Unirte al Club Secreto Secretoso": "Unirte al Club Secreto Secretoso",
+    "HOME": "INICIO",
+    "¡Bienvenido!": "¡Bienvenido!",
+    "Al club secreto secretoso, más secreto y secretoso de todos los clubs secretos y secretosos.": "Al club secreto secretoso, más secreto y secretoso de todos los clubs secretos y secretosos.",
+    "Más sobre nosotros": "Más sobre nosotros",
+    "Administrar Miembros del Club": "Administrar Miembros del Club",
+    "CRUD Miembros!": "¡CRUD Miembros!",
+    "Gestión del club": "Gestión del club",
+    "Ver miembros": "Ver miembros"
 
 
 }
+
+
