--- a/lang/fr.json
+++ b/lang/fr.json
@@ -102,6 +102,14 @@
     "Un Secreto Mejor Guardado": "Un Secret Mieux Gardé",
     "Los miembros más avanzados del Club han descubierto un secreto que cambia el rumbo de toda la organización. Los detalles aún son confidenciales, pero pronto se revelarán.": "Les membres les plus avancés du Club ont découvert un secret qui change le cours de toute l'organisation. Les détails sont encore confidentiels, mais ils seront bientôt révélés.",
     "Mantente atento. Las noticias secretas llegan solo a los más preparados.": "Restez attentif. Les nouvelles secrètes arrivent uniquement aux plus préparés.",
-    "Unirte al Club Secreto Secretoso": "Rejoindre le Club Secret"
+    "Unirte al Club Secreto Secretoso": "Rejoindre le Club Secret",
+    "HOME": "ACCUEIL",
+    "¡Bienvenido!": "Bienvenue!",
+    "Al club secreto secretoso, más secreto y secretoso de todos los clubs secretos y secretosos.": "Au club secret le plus secret et secret de tous les clubs secrets et secrets.",
+    "Más sobre nosotros": "Plus sur nous",
+    "Administrar Miembros del Club": "Gérer les membres du club",
+    "CRUD Miembros!": "CRUD Membres!",
+    "Gestión del club": "Gestion du club",
+    "Ver miembros": "Voir les membres"
 
 }
