hasta los mismisimos de los idiomas

--- a/lang/en.json
+++ b/lang/en.json
@@ -110,6 +110,23 @@
     "Administrar Miembros del Club": "Manage Club Members",
     "CRUD Miembros!": "CRUD Members!",
     "Gestión del club": "Club Management",
-    "Ver miembros": "View members"
+    "Ver miembros": "View members",
+    "ABOUT": "ABOUT",
+    "Bienvenido al Club Secreto Secretoso": "Welcome to the Secret Secretoso Club",
+    "El Club Secreto Secretoso": "The Secret Secretoso Club",
+    "es el club más secreto y secretoso de todos. Si encontraste este lugar, felicidades, eres parte de un selecto grupo de individuos elegidos. Pero antes de que sigas, recuerda:": "is the most secret and secretive club of all. If you found this place, congratulations, you are part of a select group of chosen individuals. But before you proceed, remember:",
+    "No hablarás de este club con nadie.": "You will not talk about this club with anyone.",
+    "Lo que sucede aquí, queda aquí.": "What happens here, stays here.",
+    "Nadie es más secreto que el Club Secreto Secretoso.": "No one is more secret than the Secret Secretoso Club.",
+    "Lo que nos define es nuestra capacidad de mantener el misterio.": "What defines us is our ability to keep the mystery.",
+    "Solo los más intrépidos se han unido a nosotros.": "Only the bravest have joined us.",
+    "Este es un lugar donde la curiosidad no tiene límites, pero la discreción es primordial.": "This is a place where curiosity knows no bounds, but discretion is paramount.",
+    "Nuestro club ha existido desde tiempos remotos, sus orígenes son tan antiguos que nadie recuerda cómo empezó. Los detalles siguen siendo un misterio, pero lo que sabemos es que es": "Our club has existed since ancient times, its origins are so old that no one remembers how it started. The details remain a mystery, but what we know is that it is",
+    "más secreto que un secreto en una caja fuerte subterránea, guardado por un dragón invisible.": "more secret than a secret in an underground vault, guarded by an invisible dragon.",
+    "Si estás aquí, es porque eres digno de ser parte de esta organización tan exclusiva. Los miembros del Club Secreto Secretoso no son solo cualquier persona. Somos un grupo selecto de personas comprometidas con la discreción, la aventura y, por supuesto, el misterio.": "If you're here, it's because you're worthy of being part of this exclusive organization. Members of the Secret Secretoso Club are not just anyone. We are a select group of individuals committed to discretion, adventure, and of course, mystery.",
+    "Si estás listo para unirte, recuerda, el primer paso es": "If you're ready to join, remember, the first step is",
+    "no contarle a nadie": "not telling anyone",
+    "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "that you've found our club. The second step... well, we'll reveal that to you in due time.",
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Welcome to the most secret, mysterious, and secretive place in the world! May the mystery accompany you."
 
 }
