--- a/lang/es.json
+++ b/lang/es.json
@@ -110,8 +110,24 @@
     "Administrar Miembros del Club": "Administrar Miembros del Club",
     "CRUD Miembros!": "¡CRUD Miembros!",
     "Gestión del club": "Gestión del club",
-    "Ver miembros": "Ver miembros"
-
+    "Ver miembros": "Ver miembros",
+    "ABOUT": "ACERCA DE",
+    "Bienvenido al Club Secreto Secretoso": "Bienvenido al Club Secreto Secretoso",
+    "El Club Secreto Secretoso": "El Club Secreto Secretoso",
+    "es el club más secreto y secretoso de todos. Si encontraste este lugar, felicidades, eres parte de un selecto grupo de individuos elegidos. Pero antes de que sigas, recuerda:": "es el club más secreto y secretoso de todos. Si encontraste este lugar, felicidades, eres parte de un selecto grupo de individuos elegidos. Pero antes de que sigas, recuerda:",
+    "No hablarás de este club con nadie.": "No hablarás de este club con nadie.",
+    "Lo que sucede aquí, queda aquí.": "Lo que sucede aquí, queda aquí.",
+    "Nadie es más secreto que el Club Secreto Secretoso.": "Nadie es más secreto que el Club Secreto Secretoso.",
+    "Lo que nos define es nuestra capacidad de mantener el misterio.": "Lo que nos define es nuestra capacidad de mantener el misterio.",
+    "Solo los más intrépidos se han unido a nosotros.": "Solo los más intrépidos se han unido a nosotros.",
+    "Este es un lugar donde la curiosidad no tiene límites, pero la discreción es primordial.": "Este es un lugar donde la curiosidad no tiene límites, pero la discreción es primordial.",
+    "Nuestro club ha existido desde tiempos remotos, sus orígenes son tan antiguos que nadie recuerda cómo empezó. Los detalles siguen siendo un misterio, pero lo que sabemos es que es": "Nuestro club ha existido desde tiempos remotos, sus orígenes son tan antiguos que nadie recuerda cómo empezó. Los detalles siguen siendo un misterio, pero lo que sabemos es que es",
+    "más secreto que un secreto en una caja fuerte subterránea, guardado por un dragón invisible.": "más secreto que un secreto en una caja fuerte subterránea, guardado por un dragón invisible.",
+    "Si estás aquí, es porque eres digno de ser parte de esta organización tan exclusiva. Los miembros del Club Secreto Secretoso no son solo cualquier persona. Somos un grupo selecto de personas comprometidas con la discreción, la aventura y, por supuesto, el misterio.": "Si estás aquí, es porque eres digno de ser parte de esta organización tan exclusiva. Los miembros del Club Secreto Secretoso no son solo cualquier persona. Somos un grupo selecto de personas comprometidas con la discreción, la aventura y, por supuesto, el misterio.",
+    "Si estás listo para unirte, recuerda, el primer paso es": "Si estás listo para unirte, recuerda, el primer paso es",
+    "no contarle a nadie": "no contarle a nadie",
+    "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.",
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe."
 
 }
 
