--- a/lang/fr.json
+++ b/lang/fr.json
@@ -110,6 +110,24 @@
     "Administrar Miembros del Club": "Gérer les membres du club",
     "CRUD Miembros!": "CRUD Membres!",
     "Gestión del club": "Gestion du club",
-    "Ver miembros": "Voir les membres"
+    "Ver miembros": "Voir les membres",
+    "ABOUT": "À PROPOS",
+    "Bienvenido al Club Secreto Secretoso": "Bienvenue au Club Secret Secretoso",
+    "El Club Secreto Secretoso": "Le Club Secret Secretoso",
+    "es el club más secreto y secretoso de todos. Si encontraste este lugar, felicidades, eres parte de un selecto grupo de individuos elegidos. Pero antes de que sigas, recuerda:": "c'est le club le plus secret et secret de tous. Si vous avez trouvé cet endroit, félicitations, vous faites partie d'un groupe sélect d'individus choisis. Mais avant de continuer, rappelez-vous:",
+    "No hablarás de este club con nadie.": "Vous ne parlerez de ce club à personne.",
+    "Lo que sucede aquí, queda aquí.": "Ce qui se passe ici, reste ici.",
+    "Nadie es más secreto que el Club Secreto Secretoso.": "Personne n'est plus secret que le Club Secret Secretoso.",
+    "Lo que nos define es nuestra capacidad de mantener el misterio.": "Ce qui nous définit, c'est notre capacité à maintenir le mystère.",
+    "Solo los más intrépidos se han unido a nosotros.": "Seuls les plus intrépides nous ont rejoints.",
+    "Este es un lugar donde la curiosidad no tiene límites, pero la discreción es primordial.": "C'est un endroit où la curiosité n'a pas de limites, mais la discrétion est primordiale.",
+    "Nuestro club ha existido desde tiempos remotos, sus orígenes son tan antiguos que nadie recuerda cómo empezó. Los detalles siguen siendo un misterio, pero lo que sabemos es que es": "Notre club existe depuis des temps anciens, ses origines sont si anciennes que personne ne se souvient de son commencement. Les détails restent un mystère, mais ce que nous savons, c'est que c'est",
+    "más secreto que un secreto en una caja fuerte subterránea, guardado por un dragón invisible.": "plus secret qu'un secret dans un coffre-fort souterrain, gardé par un dragon invisible.",
+    "Si estás aquí, es porque eres digno de ser parte de esta organización tan exclusiva. Los miembros del Club Secreto Secretoso no son solo cualquier persona. Somos un grupo selecto de personas comprometidas con la discreción, la aventura y, por supuesto, el misterio.": "Si vous êtes ici, c'est parce que vous êtes digne de faire partie de cette organisation exclusive. Les membres du Club Secret Secretoso ne sont pas n'importe qui. Nous sommes un groupe sélect d'individus engagés envers la discrétion, l'aventure et, bien sûr, le mystère.",
+    "Si estás listo para unirte, recuerda, el primer paso es": "Si vous êtes prêt à vous joindre à nous, rappelez-vous, la première étape est",
+    "no contarle a nadie": "ne pas en parler à personne",
+    "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "que vous avez trouvé notre club. La deuxième étape... eh bien, cela vous sera révélé en temps voulu.",
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Bienvenue à l'endroit le plus secret, mystérieux et secret du monde! Que le mystère vous accompagne."
+
 
 }
