contacto oficialmente funciona

--- a/lang/en.json
+++ b/lang/en.json
@@ -127,6 +127,7 @@
     "Si estás listo para unirte, recuerda, el primer paso es": "If you're ready to join, remember, the first step is",
     "no contarle a nadie": "not telling anyone",
     "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "that you've found our club. The second step... well, we'll reveal that to you in due time.",
-    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Welcome to the most secret, mysterious, and secretive place in the world! May the mystery accompany you."
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Welcome to the most secret, mysterious, and secretive place in the world! May the mystery accompany you.",
+    "contact": "contact"
 
 }
