--- a/lang/fr.json
+++ b/lang/fr.json
@@ -127,7 +127,8 @@
     "Si estás listo para unirte, recuerda, el primer paso es": "Si vous êtes prêt à vous joindre à nous, rappelez-vous, la première étape est",
     "no contarle a nadie": "ne pas en parler à personne",
     "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "que vous avez trouvé notre club. La deuxième étape... eh bien, cela vous sera révélé en temps voulu.",
-    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Bienvenue à l'endroit le plus secret, mystérieux et secret du monde! Que le mystère vous accompagne."
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "Bienvenue à l'endroit le plus secret, mystérieux et secret du monde! Que le mystère vous accompagne.",
+    "contact": "contact"
 
 
 }
