--- a/lang/es.json
+++ b/lang/es.json
@@ -127,7 +127,8 @@
     "Si estás listo para unirte, recuerda, el primer paso es": "Si estás listo para unirte, recuerda, el primer paso es",
     "no contarle a nadie": "no contarle a nadie",
     "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.": "que has encontrado nuestro club. El segundo paso... bueno, eso te lo revelaremos en su momento.",
-    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe."
+    "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.": "¡Bienvenido a lo más secreto, misterioso y secreto del mundo! Que el misterio te acompañe.",
+    "contact": "contacto"
 
 }
 
