--- a/lang/en.json
+++ b/lang/en.json
@@ -86,7 +86,7 @@
     "Your email address is unverified.": "Your email address is unverified.",
     "CLUB SECRETO": "SECRET CLUB",
     "logout": "logout",
-    "inicio": "Inicio",
+    "inicio": "Home",
     "sobre": "About",
     "novedades": "News",
     "Últimas Noticias del Club Secreto Secretoso": "Latest News from the Secret Club",
